--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -4,7 +4,7 @@
               http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	version="2.5" xmlns="http://java.sun.com/xml/ns/javaee">
 
-	<!-- Servlets -->
+	<!-- Servlets 
 	<servlet>
 		<servlet-name>migrationServlet</servlet-name>
 		<servlet-class>com.assetsense.tagbuilder.serviceImpl.MigrationServiceImpl</servlet-class>
@@ -13,7 +13,7 @@
 	<servlet-mapping>
 		<servlet-name>migrationServlet</servlet-name>
 		<url-pattern>/tagbuilder/migration</url-pattern>
-	</servlet-mapping>
+	</servlet-mapping>-->
 
 	<!-- Default page to serve -->
 	<welcome-file-list>
