model entity added

--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -55,6 +55,17 @@
 		<servlet-name>lookupService</servlet-name>
 		<url-pattern>/tagbuilder/lookup</url-pattern>
 	</servlet-mapping>
+	
+	
+	<servlet>
+		<servlet-name>modelService</servlet-name>
+		<servlet-class>com.assetsense.tagbuilder.serviceImpl.ModelServiceImpl</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>modelService</servlet-name>
+		<url-pattern>/tagbuilder/model</url-pattern>
+	</servlet-mapping>
 	<!-- Default page to serve -->
 	<welcome-file-list>
 		<welcome-file>Tagbuilder.html</welcome-file>
